Fix: Link alignment

--- a/src/components/ui/ContentBox/ContentBox.scss
+++ b/src/components/ui/ContentBox/ContentBox.scss
@@ -29,6 +29,7 @@
     grid-template-columns: 2rem 1fr;
     color: $ruukku-750;
     margin: 1rem;
+    align-items: center;
     &:hover {
       color: $black;
     }
